--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
         </div>
       </section>
 
+
+
+      <!-- History Section -->
+      <aside class="lg:col-span-3 bg-white rounded shadow p-4">
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="font-bold text-lg"><span><i class="fa-regular fa-clock"></i></span> Call History</h2>
+          <button id="clearHistory" class="bg-green-500 h-[40px] w-[70px] lg:h-[50px] lg:w-[125px] rounded-full justify-center items-center text-sm text-white"> Clear</button>
+        </div>
+        <ul id="historyList" class="text-sm space-y-2">
+
+        </ul>
+    </aside>
   </main>
 
 
